style.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
:root {
  --primary-color: #262c31;
  --secondary-color: #f1f1f1;
  --section-color:  #191d20;
  --hover-color: #65c1c2;
}

* {
  padding: 0;
  margin: 0;
  font-family: 'Raleway', sans-serif;
}

body {
  background-color: var(--secondary-color);
  display: -ms-grid;
  display: grid;
  -ms-grid-rows: (auto)[4];
  grid-template-rows: repeat(4, auto);
  place-items: center;
  
  height: 100%;
}

body a {
  text-decoration: none;
  color: black;
  display: grid;
  grid-template-columns: auto;
}

body #header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: var(--secondary-color) !important;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  border-top: transparent;
  border-left: transparent;
  border-right: transparent;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
  -ms-flex-line-pack: center;
      align-content: center;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  left: 0;
  z-index: 2000;
}

body #header #nav-bar {
  -webkit-box-pack: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  -ms-flex-item-align: center;
      align-self: center;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  font-size: 1.2em;
  font-weight: 600;
}

body #header #nav-bar #header-img {
  width: 4rem;
  max-width: 300px;
  height: auto;
  padding: 0.5em 0em;
}

body #header #nav-bar .nav-link {
  padding: 1em 1em;
  -webkit-transition: 0.20s background-color ease-out;
  transition: 0.20s background-color ease-out;
  border-bottom: 4px solid transparent;
}

body #header #nav-bar .nav-link:hover {
  border-bottom: 4px solid #56a3a5;
  -webkit-transition: 0.20s border-bottom ease-in;
  transition: 0.20s border-bottom ease-in;
}

body #description {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  padding: 1em;
  margin-top: 1em;
  gap: 1em;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

body #description img#showImage {
  width: calc(max(20rem,50vw));
  margin: auto;
  transform: scale(0.6);
}

body #description #detail-product {
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  padding: 1em 2em;
  font-size: 1.6em;
}

body #description #detail-product #title {
  margin-bottom: 0.5em;
  font-size: 1.4em;
  font-weight: 600;
  text-align: center;
}

body #description #detail-product #descriptionText {
  font-size: calc(max(0.7em,1.5vw));
  line-height: 1.5em;
  text-align: justify;
  width: fit-content;
  min-width: 18em;
}

body #description #detail-product #button-info {
  padding: 0.7em;
  font-size: calc(max(0.8em,1.5vw));
  background-color: var(--hover-color);
  border-radius: 2em;
  color: white;
  border: none;
  margin-top: 1em;
  cursor: pointer;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  -webkit-transition: 0.2s background-color ease-in;
  transition: 0.2s background-color ease-in;
}

body #description #detail-product #button-info:hover {
  background-color: var(--hover-color);
  -webkit-transition: 0.2s background-color ease-out;
  transition: 0.2s background-color ease-out;
}

body #sectionVideo {
  width: 100%;
  text-align: center;
  padding: 2em 0em;
  color: white;
  font-size: 2.5em;
  background-color: var(--section-color);
  font-weight: 600;
}

body #sectionVideo p {
  margin-bottom: 1em;
}

body #sectionVideo #video {
  width: calc(max(40vw,20rem));
  height: calc(max(25vw,15rem));
  border: none;
  border-radius: 2rem;
}

body #prices {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  width: 100%;
  text-align: center;
}

body #prices #section-member {
  font-size: 2.5em;
  font-weight: bold;
  margin-top: 1em;
}

body #prices .container-items {
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  display: -ms-grid;
  display: grid;
  justify-items: center;
  gap: 4em 2em;
  padding: 5em 0em;
}

@media (min-width: 1270px) {
  body #prices .container-items {
    -ms-grid-columns: (1fr)[3];
        grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 1269px) {
  body #prices .container-items {
    -ms-grid-rows: (1fr)[1];
        grid-template-rows: repeat(1, 1fr);
  }
}

body #prices .container-items #item-member {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center;
  -webkit-box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.08);
  box-shadow: 0px 0px 18px 5px rgba(0, 0, 0, 0.08);
  border-radius: 5px;
  padding: 0em;
  border: none;
  width: 25rem;
}

body #prices .container-items #item-member #header-item {
  font-size: 2em;
  background-color: var(--hover-color);
  color: white;
  padding: 1em;
  font-weight: 600;
}

body #prices .container-items #item-member #price {
  font-size: 2.5rem;
  font-weight: 600;
  margin: 1em;
}

body #prices .container-items #item-member #atributes-item {
  list-style-type: none;
  font-size: 1.4em;
}

body #prices .container-items #item-member #atributes-item li {
  margin-bottom: 0.4em;
}

body #prices .container-items #item-member #select-item {
  margin: 2em 4em;
  padding: 0.5em 0em;
  border: none;
  background-color: var(--hover-color);
  color: white;
  border-radius: 1em;
  font-size: 1.4em;
  font-weight: 600;
  -webkit-transition: 0.25s background-color ease-in;
  transition: 0.25s background-color ease-in;
}

body #prices .container-items #item-member #select-item:hover {
  background-color: #56a3a5;
  -webkit-transition: 0.25s background-color ease-out;
  transition: 0.25s background-color ease-out;
}

body #form {
  width: 100%;
  background-color: var(--section-color);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  font-size: 2.5em;
  color: white;
  font-weight: bold;
  justify-content: center;
}

body #form label {
  margin-top: 1.2em;
}

body #form input[type="email"] {
  width: 25rem;
  font-size: 0.8em;
  border: 5px solid #262c31;
  background-color: #181c1f;
  color: white;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  margin: 1em 0em;
  text-align: center;
  border-radius: 1em;
  outline: none;
  padding: 0.2em 0em;
}

body #form input[type="submit"] {
  width: 20rem;
  padding: 0.5em 0em;
  font-size: 0.7em;
  -ms-flex-item-align: center;
      -ms-grid-row-align: center;
      align-self: center;
  margin-bottom: 1em;
  border-radius: 2em;
  background-color: var(--hover-color);
  color: white;
  border: none;
  -webkit-transition: 0.25s background-color ease-out;
  transition: 0.25s background-color ease-out;
}


body #form input[type="submit"]:hover {
  background-color: #56a3a5;
  -webkit-transition: 0.25s background-color ease-in;
  transition: 0.25s background-color ease-in;
}
/*# sourceMappingURL=style.css.map */

